# python-glfw

./: README.md  numpy-examples.ipynb  pyproject.toml  start.bat
src/python_glfw/: logger.py  main.py
src/python_glfw/components/: __init__.py  background.py  color_triangle.py  component.py  graph.py  text.py
src/python_glfw/scenes/: scene.py
src/python_glfw/screens/: __init__.py  graph.py
